@startuml

class UpdateScheduleRecurringLessonUI {
doShow()
}

class UpdateScheduleRecurringLessonController {
updateSchedule()
allRecurringLessons()
save()
}

class RecurringLessonRepository {
}

class RecurringLesson {
updateScheduleOfLesson(Calendar, Calendar, Duration)
}

class ListRecurringLessonsService {
allRecurringLessons()
}

UpdateScheduleRecurringLessonUI --> UpdateScheduleRecurringLessonController
UpdateScheduleRecurringLessonController --> RecurringLesson
UpdateScheduleRecurringLessonController --> RecurringLessonRepository
UpdateScheduleRecurringLessonController --> ListRecurringLessonsService

@enduml